Update string encoding example with Mark's current location

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1654,18 +1654,18 @@ So the final encoding is:
 \end{tabular}
 \vspace{0.3cm}
 
-Suppose you want to encode the string MarkDePristoWorksAtTheBroad, a string of size 27.
+Suppose you want to encode the string MarkDePristoWorksAtGoogle, a string of size 25.
 First, we need the type descriptor byte, which is the string type 0x07.
-Because the size exceeds the inline size ($27 > 15$) we set the size to overflow, yielding the type byte of 0xF0 | 0x07 = 0xF7.
-Immediately following the type byte is the typed size of 27, which we encode by the atomic INT8 value: 0x11 followed by the actual size 0x1B.
+Because the size exceeds the inline size ($25 > 15$) we set the size to overflow, yielding the type byte of 0xF0 | 0x07 = 0xF7.
+Immediately following the type byte is the typed size of 25, which we encode by the atomic INT8 value: 0x11 followed by the actual size 0x19.
 Finally comes the actual bytes of the string: 0x4D 0x61 0x72 0x6B 0x44 0x65 0x50 0x72 0x69 0x73 0x74 0x6F 0x57 0x6F 0x72 0x6B 0x73 0x41 0x74 0x54 0x68 0x65 0x42 0x72 0x6F 0x61 0x64.
 So the final encoding is:
 
 \vspace{0.3cm}
 \begin{tabular}{ | p{9cm} | p{6cm} | } \hline
 0xF7 & string with overflow size \\ \hline
-0x11 0x1B & overflow size encoded as INT8 with value 27 \\ \hline
-0x4D 0x61 0x72 0x6B 0x44 0x65 0x50 0x72 0x69 0x73 0x74 0x6F 0x57 0x6F 0x72 0x6B 0x73 0x41 0x74 0x54 0x68 0x65 0x42 0x72 0x6F 0x61 0x64 & message in ASCII \\ \hline
+0x11 0x19 & overflow size encoded as INT8 with value 27 \\ \hline
+0x4D 0x61 0x72 0x6B 0x44 0x65 0x50 0x72 0x69 0x73 0x74 0x6F 0x57 0x6F 0x72 0x6B 0x73 0x41 0x74 0x47 0x6F 0x6F 0x67 0x6c 0x65 & message in ASCII \\ \hline
 \end{tabular}
 \vspace{0.3cm}
 
