make definition of valid chars for ALT IDs consistent
The definition of valid characters for ALT IDs is present in both
the metadata section and the data lines sections, and was
different.

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -177,7 +177,7 @@ Symbolic alternate alleles are described as follows:
 
 \noindent \textbf{Structural Variants} \newline
 In symbolic alternate alleles for imprecise structural variants, the ID field indicates the type of structural variant, and can be a colon-separated list of types and subtypes.
-ID values are case sensitive strings and must not contain whitespace or angle brackets.
+ID values are case sensitive strings and must not contain whitespace, commas or angle brackets.
 The first level type must be one of the following:
 \begin{itemize}
   \item DEL Deletion relative to the reference
