--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -355,7 +355,7 @@ The resulting string is the result of joining the following six values with comm
 \item POS is 1-based.
 \item Strand is either `{\tt +}' or `{\tt -}', indicating positive/negative strand, corresponding to bit 0x10 of FLAG (unset/set).
 \item CIGAR encoded as a string.
-\item MAPQ as a string.
+\item MAPQ as a numeric mapping quality.
 \item NM, the value of the {\tt NM} tag. It may be omitted, but the comma delimiter must be retained so that the string can be easily parsed into the 6 subfields.
 \end{itemize}
 In the presence of an existing {\tt OA} tag, a subsequent tool may append another set of original alignment information after the semicolon,
