Mapped alignments are always represented on the *forward* strand
Reinstate (and update) text from the original Pages SAM spec noting
that mapped reads are always represented on the forward genomic strand.
Fixes #368.

Spell out the implications of this for the Bit 0x10 text too.

Strand nomenclature is forward/reverse rather than positive/negative.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -217,7 +217,7 @@ for any associated quality values.
 \item[SA:Z:\tagregex{{\tt (}\emph{rname}{\tt ,}\emph{pos}{\tt ,}\emph{strand}{\tt ,}\emph{CIGAR}{\tt ,}\emph{mapQ}{\tt ,}\emph{NM}{\tt ;)}+}]
 Other canonical alignments in a chimeric alignment, formatted as a semicolon-delimited list.
 Each element in the list represents a part of the chimeric alignment. Conventionally, at a supplementary line, the first element points to the primary line.
-\emph{Strand} is either `{\tt +}' or `{\tt -}', indicating positive/negative strand, corresponding to FLAG bit 0x10.
+\emph{Strand} is either `{\tt +}' or `{\tt -}', indicating forward/reverse strand, corresponding to FLAG bit 0x10.
 \emph{Pos} is a 1-based coordinate.
 
 \item[SM:i:\tagvalue{score}]
