[SQUASH ME] Suggested rewrite without bullet list
Use "original alignment entry" to be more specific.
Say "textual SAM representations" (but "generally" because STRAND is not
direct from a SAM field); now there's nothing needed for some subfields
so compress the bullet list into a list in a sentence.

Restore useful text in OP even if we're deprecating it.

--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -349,15 +349,14 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
 \begin{description}
 \item[OA:Z:\tagregex{(\metavar{RNAME},\metavar{POS},\metavar{strand},\metavar{CIGAR},\metavar{MAPQ},\metavar{NM};)+}]
 The original alignment information of the record prior to realignment or unalignment by a subsequent tool.
-The resulting string is the result of joining the following six values with commas `,' (no additional spaces):
-\begin{itemize}
-\item {\sf RNAME}, which must be stated explicitly; the use of `{\tt =}', which is allowed in {\sf RNEXT}, is not allowed here.
-\item POS is 1-based.
-\item Strand is either `{\tt +}' or `{\tt -}', indicating positive/negative strand, corresponding to bit 0x10 of FLAG (unset/set).
-\item CIGAR encoded as a string.
-\item MAPQ as a numeric mapping quality.
-\item NM, the value of the {\tt NM} tag. It may be omitted, but the comma delimiter must be retained so that the string can be easily parsed into the 6 subfields.
-\end{itemize}
+Each original alignment entry contains the following six field values from the original record, generally in their textual SAM representations, separated by commas (`{\tt ,}') and terminated by a semicolon (`{\tt ;}'):
+{\sf RNAME}, which must be explicit (unlike {\sf RNEXT}, `{\tt =}' may not be used here);
+1-based {\sf POS};
+`{\tt +}' or `{\tt -}', indicating forward/reverse strand respectively (as per bit~0x10 of {\sf FLAG});
+{\sf CIGAR};
+{\sf MAPQ};
+{\tt NM} tag value, which may be omitted (though the preceding comma must be retained).
+
 In the presence of an existing {\tt OA} tag, a subsequent tool may append another set of original alignment information after the semicolon,
 adding to---rather than replacing---the existing {\tt OA} information.
 
@@ -370,7 +369,7 @@ Original CIGAR, usually before realignment.
 Deprecated in favour of the more general {\tt OA}.
 
 \item[OP:i:\tagvalue{pos}]
-Original {\sf POS}, usually before realignment.
+Original 1-based {\sf POS}, usually before realignment.
 Deprecated in favour of the more general {\tt OA}.
 
 \item[OQ:Z:\tagvalue{qualities}]
